[package]
name = "deltachat-echo-bot"
version = "0.1.0"
authors = ["DeltaChatBot Contributers<https://github.com/deltachat-bot>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deltachat = { git = "https://github.com/deltachat/deltachat-core-rust", tag="1.94.0"}
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
futures-lite = "1.11.2"
anyhow = "1"
