[package]
name = "deltachat-echo-bot"
version = "0.1.0"
authors = ["DeltaChatBot Contributers<https://github.com/deltachat-bot>"]
edition = "2021"

[dependencies]
anyhow = "1.0.66"
deltachat = { git = "https://github.com/deltachat/deltachat-core-rust", tag="1.98.0"}
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "signal"] }
