[package]
name = "deltachat-echo-bot"
version = "0.1.0"
authors = ["DeltaChatBot Contributers<https://github.com/deltachat-bot>"]
edition = "2021"

[dependencies]
anyhow = "1.0.79"
deltachat = { git = "https://github.com/deltachat/deltachat-core-rust", tag="v1.132.1"}
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "signal"] }
